Wed Jun 05 10:07:29 1996  Mike Ladwig  <mike@twinpeaks.prc.com>

	* error.c: Don't declare strerror if it is #defined.

Wed Jun 05 10:07:29 1996  Mike Ladwig  <mike@twinpeaks.prc.com>
			  and Jim Kingdon  <kingdon@cyclic.com>

	* cvs.h: If ENUMS_CAN_BE_TROUBLE, typedef Dtype to int not an enum.

Wed Jun 05 10:07:29 1996  Mike Ladwig  <mike@twinpeaks.prc.com>
			  and Jim Kingdon  <kingdon@cyclic.com>

	* update.c (update):  If DONT_USE_PATCH, don't request patches.
	Also call supported_request rather than reimplementing it.

Wed Jun 05 10:07:29 1996  Mike Ladwig  <mike@twinpeaks.prc.com>

	* client.c (read_line): Changed an occurence of '\n' to '\012'.

Wed Jun  5 17:18:46 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add_directory): Don't create the directory if noexec.
	* sanity.sh (basica): New tests basica-1a10, basica-1a11 test for
	above fix.
	* sanity.sh (basicb): New tests basicb-2a10, basicb-2a11,
	basicb-3a1 test for analogous situation with files rather than
	directories.

Tue Jun  4 13:38:17 1996  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh: When doing a remote check, use :server: in CVSROOT.

Wed Jun  5 13:32:40 1996  Larry Jones  <larry.jones@sdrc.com>
			  and Jim Kingdon  <kingdon@cyclic.com>

	* ignore.c: Set ign_hold to -1 when not holding instead of 0 so 
	that holding an empty list works correctly.
	* sanity.sh (ignore): New tests 190 & 191 for above fix.

Wed Jun 5 1996  Jim Kingdon  <kingdon@cyclic.com>

	Visual C++ lint:
	* client.c (update_entries): Copy the size to an unsigned variable
	before comparing it with unsigned variables.
	(handle_created, handle_update_existing): Prototype.

Tue Jun  4 10:02:44 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (responses): Add Created and Update-existing responses.
	* server.c (server_updated): If they are supported, use them
	instead of Updated.
	* client.c (struct update_entries_data): Add existp field.
	(handle_checked_in, handle_updated, handle_new_entry,